cmake_minimum_required(VERSION 3.15)
project("AoC-2020")

# Set all binaries compiled with C++20 flags by default.
set(CMAKE_CXX_STANDARD "20")
# Export compile_commands.json file.
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory("day01")
add_subdirectory("day02")
add_subdirectory("day03")
add_subdirectory("day04")
add_subdirectory("day05")
add_subdirectory("day06")
add_subdirectory("day07")
add_subdirectory("day08")
add_subdirectory("day09")
add_subdirectory("day10")
add_subdirectory("day11")
add_subdirectory("day12")
add_subdirectory("day13")
add_subdirectory("day14")
add_subdirectory("day15")
add_subdirectory("day16")
add_subdirectory("day17")
add_subdirectory("day18")
add_subdirectory("day19")
